--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <!--NavBar-->
   <nav class="navbar navbar-expand-lg bg-dark navbar-dark fixed-top">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">
-        <img src="assets/img/logo.jpg" alt="Sua logo colocada aqui">
+      <a class="navbar-brand/" href="#">
+        <img src="assets/img/WatchFit-logo.png" alt="Sua logo colocada aqui">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
