--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!--NavBar-->
   <nav class="navbar navbar-expand-lg bg-dark navbar-dark fixed-top">
     <div class="container-fluid">
-      <a class="navbar-brand/" href="#">
+      <a class="navbar-brand" href="#">
         <img src="assets/img/WatchFit-logo.png" alt="Sua logo colocada aqui">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -322,9 +322,15 @@
   </main>
     <!--footer-->
   <footer class="text-center bg-dark p-5 mt-5 text-light">
-    <img width="80px" src="assets/img/logo.jpg" alt="">
+    <img width="150px" src="assets/img/WatchFit-logo.png" alt="">
     <p class="mt-2 mb-0 fw-bold">WatchFit | Transformando a experiência da sua academia</p>
-    <p>(95) 98419-1207</p>
+    <p>Braian, 
+      Daniela, 
+      Davi, 
+      Eduarda, 
+      Heloisa, 
+      Icaro e
+      Mateus</p>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
